# supervisord-watchdog

./: .dockerignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
example/: Dockerfile  proc.py  supervisord.conf
supervisord_watchdog/: __init__.py  watchdog.py
tests/: docker.py  test_example.py  test_readme.py
