[tool.poetry]
name = "supervisord_watchdog"
version = "0.1.0"
description = """A Python package which monitors the state of supervisord processes, and \
terminates the container if any of the critical processes terminate, \
if any of the processes crash, and optionally if all processes have terminated."""
authors = ["Morgan Saville <msaville@microsoft.com>"]

[tool.poetry.scripts]
supervisord_watchdog = "supervisord_watchdog.watchdog:main"

[tool.poetry.dependencies]
python = "^3.9"
supervisor = "^4.2.0"
types-setuptools = "^69.0.0.0"

[tool.poetry.dev-dependencies]
black = "^24.1.0"
pytest = "^7.4.3"
mypy = "^1.7.1"

[tool.poetry.extras]
test = ["pytest"]

[tool.pytest]
mock_use_standalone_module = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--strict-markers"
]

log_format = "%(asctime)s supervisord_watchdog [%(levelname)-5.5s] %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_level = "INFO"
log_cli = true
log_cli_level = "INFO"
log_file = "pytest.log"
log_file_level = 0
log_file_format = "%(asctime)s.%(msecs)03d %(filename)s:%(lineno)d %(levelname)s %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"

testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["supervisord_watchdog", "tests"]

# Require all definitions to be typed. The `Any` type may be used to explicitly
# opt-out of type checking.
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Require type parameters of generic types to be explicitly specified. The
# `Any` type may be used where a more specific type is not appropriate.
disallow_any_generics = true

# Disable implicit re-exporting of names imported by a module. Names may be
# explicitly exported using `__all__`.
implicit_reexport = true

# Error codes can be used to write more specific `type: ignore` comments.
show_error_codes = true

# Tell user about unused or redundant type definitions.
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
